--- a/project-charter.html
+++ b/project-charter.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Project Charter</title>
     <link rel="stylesheet" href="./css/style-project-charter.css" />
+    <link rel="stylesheet" href="./css/tablet.css" media="(max-width: 992px)" />
     <link rel="stylesheet" href="./css/mobile.css" media="(max-width: 600px)" />
   </head>
   <body>
