--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>Trần Anh Chiến<br />Devops</h1>
       </div>
       <div class="img-banner">
-        <img src="/images/banner.jpg" />
+        <img src="./images/banner.jpg" />
       </div>
     </section>
     <!-- Phần Bar -->
@@ -258,7 +258,7 @@
     <!-- phần chứng chỉ -->
     <section class="certification">
       <div class="web">
-        <img src="/images/Cert_PRF.png" alt="" />
+        <img src="./images/Cert_PRF.png" alt="" />
 
         <h2>Chứng chỉ lập trình web - funix</h2>
         <ul>
@@ -267,7 +267,7 @@
         </ul>
       </div>
       <div class="javascript">
-        <img src="images/Cert_PRF.png" alt="" />
+        <img src="./images/Cert_PRF.png" alt="" />
 
         <h2>Chứng chỉ lập trình Javascript - funix</h2>
         <ul>
@@ -276,7 +276,7 @@
         </ul>
       </div>
       <div class="database">
-        <img src="images/Cert_DBI.png" alt="" />
+        <img src="./images/Cert_DBI.png" alt="" />
         <h2>Chứng chỉ lập trình database - funix</h2>
         <ul>
           <li>Chứng chỉ thuộc chương trình CCDN</li>
@@ -289,7 +289,7 @@
     <!-- phần dự án -->
     <section class="du-an">
       <a href="#" class="project-header">
-        <img src="images/project_1.png" alt="" class="project-banner" />
+        <img src="./images/project_1.png" alt="" class="project-banner" />
         <h3>CV CÁ NHÂN</h3>
 
         <span class="tag blue">2021</span>
@@ -313,7 +313,7 @@
       </a>
 
       <a href="./project-charter.html" target="_blank" class="project-header">
-        <img src="images/project_2.png" alt="" class="project-banner" />
+        <img src="./images/project_2.png" alt="" class="project-banner" />
         <h3>CV CÁ NHÂN</h3>
         <div class="project-tags">
           <span class="tag blue">2021</span>
@@ -340,7 +340,7 @@
       </a>
 
       <a href="./project-charter.html" class="project-header">
-        <img src="images/project_3.png" alt="" class="project-banner" />
+        <img src="./images/project_3.png" alt="" class="project-banner" />
         <h3>CV CÁ NHÂN</h3>
         <div class="project-tags">
           <span class="tag blue">2021</span>
